# readme_generator

./: LICENSE  README.md  pyproject.toml  requirements.txt
readme_gen/: __init__.py  cli.py  generator.py  github_client.py
